# long-video-papers-summary

./: README.md
papers/: 01-longvila-r1.md  02-perceptionlm.md  03-mr-video.md  04-videolucy.md  05-video-ver.md  06-video-contrastive-decoding.md  07-sama.md  19-apvr.md  (+13 more)
src/13-worldmm/: .gitignore  README.md  pyproject.toml
src/13-worldmm/eval/: eval.py  eval_egolife.py
src/13-worldmm/preprocess/: build_memory.py
src/13-worldmm/preprocess/episodic_memory/: extract_episodic_triples.py  generate_fine_caption.py  generate_fine_caption_egolife.py
src/13-worldmm/preprocess/semantic_memory/: consolidate_semantic_memory.py  extract_semantic_triples.py
src/13-worldmm/preprocess/visual_memory/: extract_visual_features.py  extract_visual_features.sh
src/13-worldmm/script/: 1_setup.sh  2_preprocess.sh  3_build_memory.sh  4_eval.sh
src/13-worldmm/script/videomme/: 1_setup.sh  2_preprocess.sh  3_build_memory.sh  4_eval.sh
src/13-worldmm/src/HippoRAG/: setup.py
src/13-worldmm/src/HippoRAG/src/hipporag/: rerank.py
src/13-worldmm/src/worldmm/embedding/: embedding_wrapper.py  qwen3_embedding.py  vlm2vecv2.py
src/13-worldmm/src/worldmm/llm/: llm_wrapper.py  openai_gpt.py
src/13-worldmm/src/worldmm/llm/templates/: ner.py  qa.py  triple_extraction.py
src/13-worldmm/src/worldmm/memory/: memory.py  utils.py
src/13-worldmm/src/worldmm/memory/episodic/: gen_multiscale.py  memory.py  multiscale.py  openie.py
src/13-worldmm/src/worldmm/memory/semantic/: semantic_consolidation.py  semantic_extraction.py  utils.py
src/13-worldmm/src/worldmm/memory/visual/: memory.py
(+651 files in other folders)
